--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Flash Note</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body>
+  <body style="margin: 0">
     <div id="root">not rendered</div>
     <script src="server/ClientApp.js"></script>
   </body>
